--- a/Index.html
+++ b/Index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="container">
         <div class="header">
+            <h1>Welcome To Arnold's Landing Page</h1>
             <ul class="Menu clearfix">
                 <li><a href="my-webpage-grid.html">Grid View</a></li>
                 <li><a href="my-webpage.html">Simple HTML</a></li>
