--- a/my-webpage-grid.html
+++ b/my-webpage-grid.html
@@ -20,7 +20,7 @@
                     
             </div>
         </div>
-        <div class="which-city clearfix">
+        <div class="which-city">
             <h2>Paris</h2>
             <img src="images/paris.jpg" alt="">
             <p>I want to visit paris, as it is one of the beautiful cities in the world, 
@@ -36,7 +36,7 @@
                 so i would like to experience that.
             </p>
         </div>
-        <div class="foreign-language clearfix">
+        <div class="foreign-language">
             <h3>A Foreign Language I Want To Learn</h3>
             <table>
                 <tr>
